Makefile: refactor build scripts
Signed-off-by: Ammar Faizi <ammarfaizi2@gnuweeb.org>

--- a/src/emerg/Makefile
+++ b/src/emerg/Makefile
@@ -7,7 +7,6 @@
 # Copyright (C) 2021  Ammar Faizi
 #
 
-INCLUDE_DIR += -I$(BASE_DIR)/src
-DEP_DIRS += $(BASE_DEP_DIR)/src
+DEP_DIRS += $(BASE_DEP_DIR)/src/emerg
 
-include $(BASE_DIR)/src/emerg/Makefile
+include $(BASE_DIR)/src/emerg/arch/Makefile
