--- a/src/emerg/arch/Makefile
+++ b/src/emerg/arch/Makefile
@@ -7,7 +7,8 @@
 # Copyright (C) 2021  Ammar Faizi
 #
 
-INCLUDE_DIR += -I$(BASE_DIR)/src
-DEP_DIRS += $(BASE_DEP_DIR)/src
+DEP_DIRS += $(BASE_DEP_DIR)/src/emerg/arch
 
-include $(BASE_DIR)/src/emerg/Makefile
+
+# TODO: create arch detection and include specific Makefile
+include $(BASE_DIR)/src/emerg/arch/x64/Makefile
