test: fix all unit test
Signed-off-by: Ammar Faizi <ammarfaizi2@gnuweeb.org>

--- a/test/emerg/x64/Makefile
+++ b/test/emerg/x64/Makefile
@@ -14,7 +14,7 @@ TEST_EXE := \
 
 $(TEST_EXE): $(TARGET_BIN)
 	$(CC_PRINT)
-	$(Q)$(CC) $(PIC_FLAGS) $(DEPFLAGS_EXE) $(CFLAGS) $(EXE_TO_C) -o $(@) -L$(BASE_DIR) -lhpcemerg
+	$(Q)$(CC) $(PIC_FLAGS) $(DEPFLAGS_EXE) $(CFLAGS) $(EXE_TO_C) -o $(@) -L$(BASE_DIR) -lhpcemerg -lpthread
 
 #
 # Include generated dependencies
