.github/workflows/main.yml: add clang build support
Signed-off-by: Ammar Faizi <ammarfaizi2@gnuweeb.org>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,12 @@ jobs:
       - name: Install Dependencies
         run: sudo apt-get install gcc make clang -y
       
-      - name: Build and Test
-        run: make test_x64 -j4;
+      - name: Build and Test (GCC)
+        run: |
+          make test_x64 -j4;
+          make clean -j4;
+
+      - name: Build and Test (Clang)
+        run: |
+          make CC=clang CXX=clang++ test_x64 -j4;
+          make clean -j4;
