hpcemerg: Add initial hpcemerg files and build scripts
This adds initial hpcemerg files and build scripts. The build scripts
are largely copied from the TeaVPN2 project.

Signed-off-by: Ammar Faizi <ammarfaizi2@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,17 @@
 *.so
 *.swo
 *.swp
+*.log
 *.tmp
 *.lock
+*.dump
+*.gcno
+*.gcda
+*.gcov
+*.test
+*.tmp.c
 *.patch
 /.deps/
+/.vscode/
+/config-host.h
+/config-host.mak
